css/forms.css
/* used for the reportIssue and requestDocument files */
@import url(https://fonts.googleapis.com/css?family=Inter);

html, body {
    width: 100%;
    height: 100%;
    margin: 0; /* Remove default margin */
    padding: 0; /* Remove default padding */
    overflow: hidden; /* Prevent scrollbars from appearing */
    background: linear-gradient(-180deg, #1070E8, #D1DDEB);
    font-family: 'Inter';
}

.formContainer {
    display: flex;
    flex-direction: column;
    align-items: left;
    width: 1248px;
    height: 550px;
    background-color: rgba(255, 255, 255, 0.6); /* White with 60% opacity */
    margin: auto;
    margin-top: 70px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 10px;
}

.formContainerCenter {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 1248px;
    height: 550px;
    background-color: rgba(255, 255, 255, 0.6); /* White with 60% opacity */
    margin: auto;
    margin-top: 70px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 10px;
}

.centerDiv {
    display: flex;
    flex-direction: column;
    width: 648px;
    height: auto;
    background-color: rgba(255, 255, 255, 0.6);
    margin: auto;
    margin-top: 100px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 20px;
}

.logo {
    width: 150px;
    height: 150px;
    position: fixed;
    margin: 5% auto;
    margin-top: 5px;
    left: 0;
    right: 0;
}

input {
    border-radius: 5px;
}

input[type="date"] {
    padding: 6px 10px;
}

input[type="file"] {
    padding: 6px 10px;
}

select {
    border-radius: 5px;
    padding: 6px 10px;
}

.formTitle {
    position: relative;
    top: 0px;
    left: 20px;
}

.formTable {
    margin: 0;
    margin-top: 50px;
    display: block;
}

.formFieldLabel {
    position: relative;
}

.reportType {
    background-color: white;
}

.inputDiv {
    display:flex;
    flex-direction:column;
}

td {
    width: 40%; 
}

.details {
    border-radius: 5px;
    padding: 2px;
    width: 90%;
    height: 200px;
}

.submitButton {
    position: relative;
    margin: 0 auto;
    margin-top: 10px;
    display:block;
    width: 250px;
    height: 30px;
    color: white;
    background: rgb(29, 5, 165);
    font-size: 150%;
    border-radius: 10px;
}

